# obsidian-mcp

./: Dockerfile  LICENSE  Makefile  PRODUCT_SPEC.md  README.md  main.py  pyproject.toml
obsidian_api/: api.py  exceptions.py  note.py  routes.py  schema.py  vault.py
tests/: test_app.py  test_notes.py  test_vault.py  test_vault_search.py
tests/test_data/: index.md  note1.md  note2.md
tests/test_data/project_1/: note1.md  note2.md
tests/test_data/project_2/: note3.md
